--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,10 @@ actix = "0.13.1"
 actix-cors = "0.6.4"
 actix-web = "4.4.0"
 actix-web-actors = "4.2.0"
+futures = "0.3.28"
 once_cell = "1.18.0"
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
-tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread"] }
+tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "full"] }
 uuid = { version = "1.4.1", features = ["v4"] }
