--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ once_cell = "1.18.0"
 rand = "0.8.5"
 serde = { version = "1.0.188", features = ["derive"] }
 serde_json = "1.0.105"
+strum_macros = "0.25.2"
 tokio = { version = "1.32.0", features = ["macros", "rt", "rt-multi-thread", "full"] }
 uuid = { version = "1.4.1", features = ["v4"] }
